--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -33,6 +33,15 @@
             <div class="content-wrapper">
                 <!-- Container-fluid -->
                 <div class="container-fluid">
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                            {% for category, message in messages %}
+                                <div class="alert alert-{{ category }}" role="alert">
+                                    {{ message }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
                     {% block content %}
                     {% endblock %}
                 </div>
