--- a/templates/admin/edit_navbar_item.html
+++ b/templates/admin/edit_navbar_item.html
@@ -4,7 +4,7 @@
         Edit {{ item.title }}
     </h1>
     <div class="content-body">
-        <form action="{{ url_for('admin.edit_navbar_item', id=item.id) }}" method="post"
+        <form action="{{ url_for('admin.navbar_items.edit', id=item.id) }}" method="post"
               enctype="multipart/form-data">
             <div class="form-group">
                 <label for="title">Title</label>
