--- a/templates/admin/navbar_items.html
+++ b/templates/admin/navbar_items.html
@@ -3,7 +3,7 @@
     <h1 class="content-title font-size-22"> <!-- font-size-22 = font-size: 2.2rem (22px) -->
         Navigation Bar Items
     </h1>
-    <a href="{{ url_for('admin.edit_navbar_item', id="new") }}" class="btn btn-success" type="button">Create New
+    <a href="{{ url_for('admin.navbar_items.edit', id="new") }}" class="btn btn-success" type="button">Create New
         Navigation Bar Item</a>
     <br><br>
     <table class="table table-bordered">
@@ -25,8 +25,8 @@
                 <td>{{ item.page.name }}</td>
                 <td class="text-right">
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <a href="{{ url_for("admin.edit_navbar_item", id=item.id) }}" class="btn" type="button">Edit</a>
-                        <button class="btn btn-danger" type="button">Delete</button>
+                        <a href="{{ url_for("admin.navbar_items.edit", id=item.id) }}" class="btn" type="button">Edit</a>
+                        <a href="{{ url_for("admin.navbar_items.delete", id=item.id) }}" class="btn btn-danger" type="button">Delete</a>
                     </div>
                 </td>
             </tr>
