Added location for flashes to login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,15 @@
 <body>
 <section class="section">
     <div class="container">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="notification is-info">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <h1 class="title">
             Administrator Login
         </h1>
