--- a/templates/website/includes/navbar.html
+++ b/templates/website/includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar is-transparent">
+<nav class="navbar is-light">
     <div class="navbar-brand">
         <a class="navbar-item" href="">
             <span class="is-size-4">{{ settings["website_name"] }}</span>
